src/app/globals.css
@import "tailwindcss";

@source "../**/*.{ts,tsx}";

@custom-variant dark (&:is(.dark *));

:root {
  --font-size: 16px;
  --background: #ffffff;
  --foreground: oklch(0.145 0 0);
  --card: #ffffff;
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: #030213;
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.95 0.0058 264.53);
  --secondary-foreground: #030213;
  --muted: #ececf0;
  --muted-foreground: #717182;
  --accent: #e9ebef;
  --accent-foreground: #030213;
  --destructive: #d4183d;
  --destructive-foreground: #ffffff;
  --border: rgba(0, 0, 0, 0.1);
  --input: transparent;
  --input-background: #f3f3f5;
  --switch-background: #cbced4;
  --font-weight-medium: 500;
  --font-weight-normal: 400;
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --radius: 0.625rem;
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: #030213;
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}
/*
 .dark {
  --background: #020f12; 
  --foreground: #f1f5f9;
  --card: #05191f; 
  --card-foreground: #f1f5f9;
  --popover: #05191f;
  --popover-foreground: #f1f5f9;
  --primary: #2eb4cc; 
  --primary-foreground: #020f12;
  --secondary: #ffb54d; 
  --secondary-foreground: #020f12;
  --muted: #0d272e;
  --muted-foreground: #94a3b8;
  --accent: #0d272e;
  --accent-foreground: #f1f5f9;
  --destructive: #7f1d1d;
  --destructive-foreground: #fef2f2;
  --border: rgba(46, 180, 204, 0.15); 
  --input: #0d272e;
  --ring: #2eb4cc;
  --sidebar: #020f12;
  --sidebar-foreground: #f1f5f9;
  --sidebar-primary: #2eb4cc;
  --sidebar-primary-foreground: #020f12;
  --sidebar-accent: #05191f;
  --sidebar-accent-foreground: #f1f5f9;
  --sidebar-border: rgba(46, 180, 204, 0.15);
  --sidebar-ring: #2eb4cc;
}
*/
@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-input-background: var(--input-background);
  --color-switch-background: var(--switch-background);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-weight-medium: var(--font-weight-medium);
  --font-weight-normal: var(--font-weight-normal);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  h1 {
    @apply text-2xl font-medium leading-normal;
  }

  h2 {
    @apply text-xl font-medium leading-normal;
  }

  h3 {
    @apply text-lg font-medium leading-normal;
  }

  h4 {
    @apply text-base font-medium leading-normal;
  }

  label {
    @apply text-base font-medium leading-normal;
  }

  button {
    @apply text-base font-medium leading-normal;
  }

  input {
    @apply text-base font-normal leading-normal;
  }
}

html {
  font-size: var(--font-size);
}

